--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "papaparse": "^5.5.3",
